--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,10 @@
         <filter-name>logFilter</filter-name>
         <filter-class>be.thomasmore.travelmore.filters.LogFilter</filter-class>
     </filter>
-
+    <filter>
+        <filter-name>IngelogtFilter</filter-name>
+        <filter-class>be.thomasmore.travelmore.filters.IngelogtFilter</filter-class>
+    </filter>
     <!--
       Declare the path (of the page) will have the effect of logFilter
      /* for all paths
@@ -30,6 +33,10 @@
     <filter-mapping>
         <filter-name>logFilter</filter-name>
         <url-pattern>/admin/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>IngelogtFilter</filter-name>
+        <url-pattern>/gebruiker/*</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
